# bestreads

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fulltext.py  0003_dnf_status.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  books.py  covers.py  lookup.py  network.py  recommendations.py  search.py  settings.py  stats.py  tags.py
backend/app/services/: anthropic_recs.py  cover_resolver.py  openlibrary.py  segmentation.py  serializers.py  tag_generator.py  tags.py  transitions.py
backend/scripts/: backfill_covers.py  backfill_descriptions.py  backfill_tags.py
backend/tests/: test_segmentation.py  test_smoke.py  test_tag_normalize.py
docs/superpowers/plans/: 2026-04-08-book-tracker.md  2026-04-09-claude-tag-generator.md  2026-04-10-book-network-visualization.md
docs/superpowers/specs/: 2026-04-09-claude-tag-generator-design.md  2026-04-10-book-network-visualization-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  books.ts  client.ts  lookup.ts  network.ts  recommendations.ts  settings.ts  stats.ts  tags.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppShell.tsx  BookCard.tsx  BookTooltip.tsx  CoverGrid.tsx  ErrorBoundary.tsx  QuickAdd.tsx  (+7 more)
mcp-server/: Dockerfile  pyproject.toml  server.py
(+10 files in other folders)
