[project]
name = "bestreads-mcp"
version = "0.1.0"
description = "MCP server exposing Book Tracker tools to Claude"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
